--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tabler/icons-react": "^3.30.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "dotted-map": "^2.2.3",
+    "framer-motion": "^12.4.9",
     "lucide-react": "^0.475.0",
     "motion": "^12.0.0-alpha.2",
     "next": "15.1.6",
@@ -25,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
