--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "dotted-map": "^2.2.3",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.475.0",
-    "motion": "^12.4.10",
-    "next": "15.1.6",
+    "next": "^16.1.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-country-flag": "^3.1.0",
@@ -49,8 +48,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
